--- a/beacon_app/windows/runner/Runner.rc
+++ b/beacon_app/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.beacon_app" "\0"
+            VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "beacon_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "beacon_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.beacon_app. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "beacon_app.exe" "\0"
             VALUE "ProductName", "beacon_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
