--- a/beacon_app/android/app/build.gradle
+++ b/beacon_app/android/app/build.gradle
@@ -23,8 +23,8 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.beacon_app.beacon_app"
-    compileSdk flutter.compileSdkVersion
+    namespace "com.example.beacon_app"
+    compileSdk 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -42,10 +42,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.beacon_app.beacon_app"
+        applicationId "com.example.beacon_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
