--- a/beacon_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/beacon_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = beacon_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.beaconapp.beaconApp
+PRODUCT_BUNDLE_IDENTIFIER = com.example.beaconApp
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.beacon_app. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
