--- a/beacon_app/pubspec.yaml
+++ b/beacon_app/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   permission_handler: ^11.3.1
   bottom_bar: ^2.0.1
   get: ^4.6.6
-  rolling_switch: ^0.0.2
+  flutter_spinbox: ^0.13.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
