--- a/beacon_app/pubspec.yaml
+++ b/beacon_app/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   bottom_bar: ^2.0.1
   get: ^4.6.6
   flutter_spinbox: ^0.13.1
+  sqflite: ^2.3.3+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
