--- a/beacon_app/pubspec.yaml
+++ b/beacon_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: beacon_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: ">=3.3.4 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,11 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.32.4
-  permission_handler: ^11.3.1
-  bottom_bar: ^2.0.1
   get: ^4.6.6
   flutter_spinbox: ^0.13.1
   sqflite: ^2.3.3+1
+  zoom_widget: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,16 +57,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/1st_floor.png
+    - assets/images/2nd_floor.png
+    - assets/images/3rd_floor.png
+    - assets/images/4th_floor.png
+    - assets/images/5th_floor.png
+    - assets/images/6th_floor.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
