--- a/beacon_app/pubspec.yaml
+++ b/beacon_app/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   get: ^4.6.6
   flutter_spinbox: ^0.13.1
   sqflite: ^2.3.3+1
-  zoom_widget: ^2.0.1
+  matrix2d: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
